# audiobook

./: .gitignore  2023-04-03_Chapter 215.txt  CLAUDE.md  README.md  image.py  llm.py  main.py  model.py  pyproject.toml  royalroad.py  validate_file.py
.claude/: settings.local.json
audiobook/: cli.py  config.py  pipeline.py  state.py
audiobook/processors/: processing.py  tts_instance.py  tts_processor.py  tts_qwen.py
audiobook/scrapers/: base.py  royalroad.py  scribblehub.py
audiobook/utils/: analytics.py  audio.py  cache.py  colors.py  error_handler.py  logger.py  progress.py
audiobook/validators/: config_validator.py  validate_file.py
audiobook/web/: app.py  dashboard.py  log_capture.py  runner.py  series_page.py  shared.py  theme.py
audiobook/web/templates/: error.html  index.html  logs.html  series_detail.html
speakers/: alloy.txt  corpse.txt  eric_michael_summerer.txt  fable.txt  heath_miller.txt  jareth.txt  jeff_hayes.txt  jewel_high.txt  john.txt  js_arquin.txt  katie.txt  katie_low.txt  katie_rant.txt  markiplier.txt  michelle_sparks.txt  nova.txt  onyx.txt  robert_low.txt  shimmer.txt  travis_baldree.txt  yuuka.txt  yuuka_low.txt
tests/: test_config_validator.py
