[project]
name = "audiobook"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Robert Clayton", email = "41345902+robert-clayton@users.noreply.github.com" },
]
dependencies = [
    "transformers>=4.33.0,<4.41.0",
    "accelerate>=0.34.2,<0.35",
    "numpy<2.0.0",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "sentencepiece>=0.2.0,<0.3",
    "protobuf>=5.28.1,<6",
    "huggingface-hub>=0.24.7",
    "bs4>=0.0.2,<0.0.3",
    "requests>=2.32.3,<3",
    "coqui-tts>=0.24.1,<0.25",
    "nltk>=3.9.1,<4",
    "tqdm>=4.66.5,<5",
    "python-dotenv>=1.0.1,<2",
    "cloudscraper>=1.2.71,<2",
]

[project.scripts]
audiobook = "audiobook.__main__:main"

[dependency-groups]
dev = [
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "bitsandbytes>=0.43.3,<0.44",
    "hqq>=0.2.2,<0.3",
    "torchvision==0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
